--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -165,5 +165,19 @@
     <string name="mediatica" translatable="false">MEDIATICA</string>
     <string name="actividades_ocio" translatable="false">ACTIVIDADES DE OCIO</string>
 
+    <string name="trastornos_mentales" translatable="false">TRASTORNOS MENTALES</string>
+    <string name="organicos" translatable="false">Trastornos mentales orgánicos, incluidos los trastornos sintomáticos</string>
+    <string name="sustancias_psicoactivas" translatable="false">Trastornos mentales y del comportamiento debido a sustancias psicoactivas</string>
+    <string name="esquizofrenia" translatable="false">Esquizofrenia, trastornos esquizotípicos y trastornos delirantes</string>
+    <string name="trastornos_humor" translatable="false">Trastornos del humor</string>
+    <string name="estres" translatable="false">Trastornos neuróticos, trastornos relacionados con el estrés y trastornos somatomorfos</string>
+    <string name="sindromes_comportamiento" translatable="false">Síndromes del comportamiento asociados con alteraciones fisiológicas y factores físicos</string>
+    <string name="trastornos_personalidad" translatable="false">Trastornos de la personalidad y del comportamiento en adultos</string>
+    <string name="retraso_mental" translatable="false">Retraso mental</string>
+    <string name="desarrollo_psicologico" translatable="false">Trastornos del desarrollo psicológico</string>
+    <string name="trastornos_emocionales" translatable="false">Trastornos emocionales y del comportamiento que aparecen habitualmente en la niñez y en la adolescencia</string>
+    <string name="trastorno_no_especificado" translatable="false">Trastorno mental no especificado</string>
+    <string name="lesiones_autoinfligidas" translatable="false">Lesiones autoinfligidas intencionalmente </string>
+
 
 </resources>
