agregado lo de vivienda deshabitada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -222,5 +222,6 @@
     <string name="enfermedades_respiratorias" translatable="false">ENFERMEDADES RESPIRATORIAS</string>
     <string name="otro_tipo_enfermedad" translatable="false">OTRO TIPO DE ENEFERMEDAD NO TRANSMISIBLE</string>
     <string name="plan_social" translatable="false">PLAN SOCIAL</string>
+    <string name="vivienda_deshabitada" translatable="false">VIVIENDA DESHABITADA</string>
 
 </resources>
