se agrega la posibilidad de almcenar la cantidad de menores y mayores en el grupo familiar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -229,4 +229,7 @@
     <string name="temephos" translatable="false">TEMEPHOS</string>
     <string name="metoprene" translatable="false">METOPRENE</string>
 
+    <string name="mayores" translatable="false">MAYORES</string>
+    <string name="menores" translatable="false">MENORES</string>
+
 </resources>
