arregle para que se puedan guardar los datos de la familia primero, error en editar cuando no tenia una fecha solucionado, cambio de color de la letra de los botones, error al avanzar de modulo y error de mostrar info solucionado.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -231,5 +231,6 @@
 
     <string name="mayores" translatable="false">MAYORES</string>
     <string name="menores" translatable="false">MENORES</string>
+    <string name="familia_general" translatable="false">FAMILIA GENERAL</string>
 
 </resources>
