arregle un error cuando se edita una persona, agregue un campo para agregar un telefono de la familia

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -232,5 +232,6 @@
     <string name="mayores" translatable="false">MAYORES</string>
     <string name="menores" translatable="false">MENORES</string>
     <string name="familia_general" translatable="false">FAMILIA GENERAL</string>
+    <string name="telefono_familiar" translatable="false">TELEFONO FAMILIAR</string>
 
 </resources>
